--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
-<!-- {% load static %}
-{% get_static_prefix as STATIC_PREFIX %} -->
 
+    <!--================Hero Banner start =================-->  
+            {% block baner_content %}
+            <h1>Blog details</h1>
+            <nav aria-label="breadcrumb" class="banner-breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Blog Details</li>
+              </ol>
+            </nav>
+            {% endblock baner_content %}
+    <!--================Hero Banner end =================-->  
+
+  <!--================ Start Blog Post Area =================-->
           {% block post_content %}
           <div class="main_blog_details">
             {% if post.image_url %}
@@ -56,5 +67,6 @@
               {% endfor %}
           </div>
           {% endblock post_content %}
-  
+ 
+  <!--================ End Blog Post Area =================-->
         
