--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
 
+    <!--================Hero Banner start =================-->  
+            {% block baner_content %}
+            <h3>Tours &amp; Travels</h3>
+            <h1>Amazing Places on earth</h1>
+            <h4>December 12, 2018</h4>
+            {% endblock baner_content %}
+    <!--================Hero Banner end =================-->  
+    
+
     <!--================ Blog slider start =================-->
     {% block slider_content %}
     <section>
