--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 {% load static %}
 {% get_static_prefix as STATIC_PREFIX %}
+
 <head>
+	{% block title %}
+	{% endblock title %}
+	<title>Sensive Blog - Contact</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
