--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %}
+  {% extends 'base.html' %}
+
+  {% block title %}
+  <title>Sensive Blog - Contact</title>
+  {% endblock title %}
 
   {% block baner_content %}
   <h1>Contact Us</h1>
