--- a/templates/index.html
+++ b/templates/index.html
@@ -1,91 +1,94 @@
-{% extends 'base.html' %}
+  {% extends 'base.html' %}
+
+  {% block title %}
+  <title>Sensive Blog - Home</title>
+  {% endblock title %}
 
     <!--================Hero Banner start =================-->  
-            {% block baner_content %}
-            <h3>Tours &amp; Travels</h3>
-            <h1>Amazing Places on earth</h1>
-            <h4>December 12, 2018</h4>
-            {% endblock baner_content %}
+  {% block baner_content %}
+  <h3>Tours &amp; Travels</h3>
+  <h1>Amazing Places on earth</h1>
+  <h4>December 12, 2018</h4>
+  {% endblock baner_content %}
     <!--================Hero Banner end =================-->  
     
 
     <!--================ Blog slider start =================-->
-    {% block slider_content %}
-    <section>
-      <div class="container">
-        <div class="d-flex">
+  {% block slider_content %}
+  <section>
+    <div class="container">
+      <div class="d-flex">
 
-          {% for post in most_popular_posts %}
-            <div class="flex-fill" style="margin-right: 30px;">
-              <div class="card blog__slide text-center">
-                <div class="blog__slide__img">
-                  {% if post.image_url %}
-                    <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
-                  {% else %}
-                    <img class="card-img rounded-0" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="">
-                  {% endif %}
-                  </div>
-                <div class="blog__slide__content">
-                  <h3><a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a></h3>
-                  <p>{{ post.published_at }}</p>
+        {% for post in most_popular_posts %}
+          <div class="flex-fill" style="margin-right: 30px;">
+            <div class="card blog__slide text-center">
+              <div class="blog__slide__img">
+                {% if post.image_url %}
+                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
+                {% else %}
+                  <img class="card-img rounded-0" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="">
+                {% endif %}
                 </div>
+              <div class="blog__slide__content">
+                <h3><a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a></h3>
+                <p>{{ post.published_at }}</p>
               </div>
             </div>
-          {% endfor %}
+          </div>
+        {% endfor %}
 
-        </div>
       </div>
-    </section>
-    {% endblock slider_content %}
+    </div>
+  </section>
+  {% endblock slider_content %}
     <!--================ Blog slider end =================-->
 
     <!--================ Start Blog Post Area =================-->
-            {% block post_content %}
-            {% for post in fresh_posts %}
-              <div class="single-recent-blog-post">
-                <div class="thumb">
-                  {% if post.image_url %}
-                    <img class="img-fluid" src="{{ post.image_url }}" alt="">
-                  {% else %}
-                    <img class="img-fluid" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="">
-                  {% endif %}
-                  <ul class="thumb-info" style="max-width: 550px;">
-                    <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at }}</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_count }} Comments</a></li>
-                  </ul>
-                </div>
-                <div class="details mt-20">
-                  <h3>{{ post.title }}</h3>
-                  <p>{{ post.text|truncatechars:200 }}</p>
-                  <a class="button" href="{% url 'post_detail' slug=post.slug %}">Read More <i class="ti-arrow-right"></i></a>
-                </div>
-              </div>
-            {% endfor %}
+  {% block post_content %}
+  {% for post in fresh_posts %}
+    <div class="single-recent-blog-post">
+      <div class="thumb">
+        {% if post.image_url %}
+          <img class="img-fluid" src="{{ post.image_url }}" alt="">
+        {% else %}
+          <img class="img-fluid" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="">
+        {% endif %}
+        <ul class="thumb-info" style="max-width: 550px;">
+          <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
+          <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at }}</a></li>
+          <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_count }} Comments</a></li>
+        </ul>
+      </div>
+      <div class="details mt-20">
+        <h3>{{ post.title }}</h3>
+        <p>{{ post.text|truncatechars:200 }}</p>
+        <a class="button" href="{% url 'post_detail' slug=post.slug %}">Read More <i class="ti-arrow-right"></i></a>
+      </div>
+    </div>
+  {% endfor %}
 
-            <div class="row">
-              <div class="col-lg-12">
-                  <nav class="blog-pagination justify-content-center d-flex">
-                      <ul class="pagination">
-                          <li class="page-item">
-                              <a href="#" class="page-link" aria-label="Previous">
-                                  <span aria-hidden="true">
-                                      <i class="ti-angle-left"></i>
-                                  </span>
-                              </a>
-                          </li>
-                          <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                          <li class="page-item"><a href="#" class="page-link">2</a></li>
-                          <li class="page-item">
-                              <a href="#" class="page-link" aria-label="Next">
-                                  <span aria-hidden="true">
-                                      <i class="ti-angle-right"></i>
-                                  </span>
-                              </a>
-                          </li>
-                      </ul>
-                  </nav>
-              </div>
-            </div>
-            {% endblock post_content %}
- 
+  <div class="row">
+    <div class="col-lg-12">
+        <nav class="blog-pagination justify-content-center d-flex">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">
+                            <i class="ti-angle-left"></i>
+                        </span>
+                    </a>
+                </li>
+                <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                <li class="page-item"><a href="#" class="page-link">2</a></li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Next">
+                        <span aria-hidden="true">
+                            <i class="ti-angle-right"></i>
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+  </div>
+  {% endblock post_content %}
