--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,9 @@
             <div class="card blog__slide text-center">
               <div class="blog__slide__img">
                 {% if post.image_url %}
-                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
+                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="image of this post">
                 {% else %}
-                  <img class="card-img rounded-0" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="">
+                  <img class="card-img rounded-0" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="image of this post">
                 {% endif %}
                 </div>
               <div class="blog__slide__content">
@@ -49,9 +49,9 @@
     <div class="single-recent-blog-post">
       <div class="thumb">
         {% if post.image_url %}
-          <img class="img-fluid" src="{{ post.image_url }}" alt="">
+          <img class="img-fluid" src="{{ post.image_url }}" alt="image of this post">
         {% else %}
-          <img class="img-fluid" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="">
+          <img class="img-fluid" src="{{ STATIC_PREFIX }}img/banner/blog.png" alt="image of this post">
         {% endif %}
         <ul class="thumb-info" style="max-width: 550px;">
           <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
