--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,10 +1,10 @@
-  {% extends 'base.html' %}
+{% extends 'base.html' %}
 
-  {% block title %}
+{% block title %}
   <title>Sensive Blog - Contact</title>
-  {% endblock title %}
+{% endblock title %}
 
-  {% block baner_content %}
+{% block baner_content %}
   <h1>Contact Us</h1>
   <nav aria-label="breadcrumb" class="banner-breadcrumb">
     <ol class="breadcrumb">
@@ -12,13 +12,13 @@
       <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
     </ol>
   </nav>
-  {% endblock baner_content %}
+{% endblock baner_content %}
 
-  {% block contact %}
+{% block contact %}
   <section class="section-margin--small section-margin">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
-        Тут будет карта
+        {{ html_map|safe }}
       </div>
 
       <div class="row">
@@ -73,6 +73,7 @@
       </div>
     </div>
   </section>
-  {% endblock contact %}
-  {% block all_post_area %}
-  {% endblock all_post_area %}
+{% endblock contact %}
+
+{% block all_post_area %}
+{% endblock all_post_area %}
